fix: css issue with spacing

--- a/css/index.css
+++ b/css/index.css
@@ -768,7 +768,7 @@ a.postlist-link {
 section.article__body ol,
 section.article__body ul {
   margin-left: 2em;
-  padding-bottom: 1.5em;
+  padding: 0 0 1.5em 0;
   max-width: 100%;
   overflow-wrap: break-word;
   word-wrap: break-word;
